user and recipe contoller and model

--- a/src/controller/verifyUser.ejs
+++ b/src/controller/verifyUser.ejs
@@ -34,7 +34,7 @@
         }
 
         .btn:hover{
-            background-color: #0000cc;
+            background-color: #2222e9;
         }
     </style>
 </head>
@@ -43,7 +43,7 @@
         <h3>You have sucessfully created your account</h3>
         <p>Dear <%=firstName %>, Are you ready to take the challenge of the Cooking Master </p>
         <p>Kindly click below to confirm your account </p>
-        <a href="<%=link %>" class="btn">Click here to confirm your email</a>
+        <a href=<%=link %> class="btn" style="color: 'white'">Click here to confirm your email</a>
         <p>If the above link is not working, you can clik the link below.</p>
         <p><%= link %></p>
     </div>
